Renamed file to html and added another hello world JS

--- a/SimpleExamples/HelloWorld.html
+++ b/SimpleExamples/HelloWorld.html
@@ -5,6 +5,7 @@
 	<body>
 		<script type="text/javascript">
 			alert("Hello, World !")
+			alert("Hello, World 2 !")
 		</script>
 		<p id="insertText">
 
